# UniversalMediaServer

./: .deepsource.toml  .gitattributes  .gitignore  .pom.xml.swp  .release-please-manifest.json  .travis.yml  BUILD.md  CHANGELOG.md  CHANGELOG.txt  CLAUDE.md  CONTRIBUTING.md  CheckStyle.xml  Code_Of_Conduct.md  DEPLOYMENT.md  Eclipse.Cleanup.xml  Eclipse.CodeTemplates.xml  Eclipse.Formatter.xml  Eclipse.README.txt  INSTALL.txt  LinkedInImagePost.java  Makefile  README.md  README.txt  RELEASE.md  STYLEGUIDE.md  UMS.launch  codeStyle.xml  entitlements.xml  issue_template.md  maven-eclipse.xml  package-lock.json  package.json  plugin.patch  pom.xml  pom.xml.orig  release-please-config.json  renovate.json  runtestserver.sh  ums.service  ums_kubuntu_nas_setup.md
.activity-logs/: .gitignore
.externalToolBuilders/: Maven_Ant_Builder.launch
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-appimage.sh  build-native.yaml  build-releases.yaml  changelog.yaml  ci.yaml  pull-request-conflict.yaml  release-please.yml  release.yml  test.yml
.github/workflows/dependencies/: entitlements.xml  gon-config-build-arm.json  gon-config-notarize-arm.json  gon-config-notarize-intel.json  gon-config-prebuild-arm.json  gon-config-prebuild.json  gon-config-sign-intel.json
configuration-client/: .env  package-lock.json  package.json
configuration-client/public/: index.html
configuration-client/src/: App.tsx
configuration-client/src/contexts/: accounts-context.tsx  i18n-context.tsx  server-event-context.tsx  session-context.tsx
configuration-client/src/providers/: accounts-provider.tsx  i18n-provider.tsx  server-event-provider.tsx  session-provider.tsx
configuration-client/src/services/: account-service.ts  accounts-service.ts  actions-service.ts  auth-header.ts  auth-service.ts  auth.service.ts  auth.service.tsx  http-interceptor.ts  http-interceptor.tsx  user.service.ts
configuration-client/src/utils/: index.tsx
contrib/: README.md  binaries-deps-versions  build-pms-binaries.sh  download-pms-binaries-source.sh  ffmpegwebvideo-first.groovy  mplayer-configure.patch  mplayer-ffmpeg.patch  mplayer.patch
contrib/ffmpeg/: CMakeLists.txt  Makefile  README.md
docker/: .dockerignore  Dockerfile  build.xml  docker-compose.yml  docker-init
docs/: UMS-NAS-Shared-Folders.md
logFilePath_IS_UNDEFINED/: logFileName_IS_UNDEFINED
react-client/: .env  .eslintrc.cjs  .eslintrc.js  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.player.ts  vite.config.ts
react-client/public/: index.html  manifest.json
react-client/src/: App.tsx  UmsApp.tsx  index.css  index.tsx  reportWebVitals.ts
react-client/src/contexts/: accounts-context.tsx  i18n-context.tsx  main-context.tsx  navbar-context.tsx  player-context.tsx  player-server-event-context.tsx  server-event-context.tsx  session-context.tsx
react-client/src/providers/: accounts-provider.tsx  i18n-provider.tsx  main-provider.tsx  navbar-provider.tsx  player-provider.tsx  player-server-event-provider.tsx  server-event-provider.tsx  session-provider.tsx  web-socket-provider.tsx
react-client/src/services/: about-service.ts  accounts-service.ts  actions-service.ts  auth-service.ts  directory-service.tsx  home-service.ts  home-service.tsx  http-interceptor.tsx  i18n-service.tsx  main-service.tsx  navbar-items.tsx  player-server-event-service.tsx  player-service.tsx  server-event-service.tsx  session-service.tsx  settings-service.tsx  shared-service.tsx
react-client/src/utils/: index.tsx  notifications.tsx
react-client/tests/: AuthenticationSettings.spec.ts  ServerSettings.spec.ts  SharedContent.spec.ts  StandalonePlayer.spec.ts  UserGroupManagement.spec.ts  firstrun.spec.ts  global.setup.ts  global.teardown.ts
scripts/: ums-release-macos-arm.sh  ums-release-macos-intel.sh
scripts/dependencies/: gon-config-build-arm.json  gon-config-build-intel.json  gon-config-build.json  gon-config-prebuild.json
src/main/: external-resourcesrenderersLG-WebOS4K.conf
src/main/assembly/: assembly-linux-amd64.xml  assembly-linux-arm64.xml  assembly-linux-armel.xml  assembly-linux-armhf.xml  assembly-linux-i686.xml  assembly-linux-x86.xml  assembly-linux-x86_64.xml  assembly-linux.xml  assembly-macos-arm.xml  assembly-macos-pre10.15.xml  assembly-macos.xml  assembly-osx.xml  assembly-osx_java7_8.xml  assembly-testing.xml  assembly-ubuntu-x86_64.xml  jar-with-dependencies.xml  osx-installer.pkgproj
src/main/external-resources/: DummyInput.ass  UMS.bat  UMS.conf  UMS.sh  VirtualFolders.conf  WEB.conf  ffmpeg.webfilters  logback.headless.xml  logback.xml  ums.service  update.data  web.css
src/main/resources/: 2d-to-3d-template.txt  PMS.xml  UPnP_AV_ConnectionManager_1.0.xml  UPnP_AV_ContentDirectory_1.0.xml  UPnP_AV_X_MS_MediaReceiverRegistrar_1.0.xml  ffmpeg_formats.txt  languages.properties  project.properties
src/test/resources/: project.properties
src/translations/af/: messages_af_ZA.properties
src/translations/ar/: messages_ar_SA.properties
src/translations/bg/: messages_bg_BG.properties
src/translations/bn/: messages_bn_BD.properties
src/translations/ca/: messages_ca_ES.properties
src/translations/cs/: messages_cs_CZ.properties
src/translations/da/: messages_da_DK.properties
src/translations/de/: messages_de_DE.properties
src/translations/el/: messages_el_GR.properties
src/translations/en-GB/: messages_en_GB.properties
src/translations/es-ES/: messages_es_ES.properties
src/translations/et/: messages_et_EE.properties
src/translations/fa/: messages_fa_IR.properties
src/translations/fi/: messages_fi_FI.properties
src/translations/fr/: messages_fr_FR.properties
src/translations/he/: messages_he_IL.properties
src/translations/hr/: messages_hr_HR.properties
web/: web.css
web-gui-client/: package.json
web-gui-client/src/: App.tsx  index.tsx
web-player-client/: .env  .yarnrc.yml  package.json
web-player-client/public/: index.html
web-player-client/src/: App.tsx
(+2968 files in other folders)
